plugins {
    id("java")
    id("application")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

tasks.withType(JavaCompile) {
    options.release = 25
    options.compilerArgs.add("--enable-preview")
}

tasks.withType(Test) {
    useJUnitPlatform()
    // 🔥 TAMBIÉN NECESARIA PARA LOS TESTS:
    jvmArgs("--enable-preview")
}

repositories {
    mavenCentral()
    maven { url "https://maven.vaadin.com/vaadin-addons" }
}

dependencies {
    // --- PRODUCCIÓN ---
    implementation("com.squareup.okhttp3:okhttp:4.12.0")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
    implementation("io.github.cdimascio:java-dotenv:5.2.2")
    implementation("ch.qos.logback:logback-classic:1.5.3")
    implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
    implementation 'com.github.appreciated:apexcharts:24.0.1'


    // --- PRUEBAS ---
    testImplementation("org.junit.jupiter:junit-jupiter:5.10.1")
    testImplementation("org.mockito:mockito-core:5.11.0")
    testImplementation("org.mockito:mockito-junit-jupiter:5.11.0")
    testImplementation("org.assertj:assertj-core:3.25.3")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
    useJUnitPlatform()
    // 🚀 Pasa todas las variables de entorno al proceso de test
    environment System.getenv()

    // Habilita soporte experimental para Java 25
    jvmArgs("-Dnet.bytebuddy.experimental=true", "-XX:+EnableDynamicAgentLoading")

    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
        exceptionFormat = "full"
    }
}

application {
    mainClass.set("com.rafaeldiaz.orquestador_gold_rush_2025")  // Tu paquete real
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.rafaeldiaz.orquestador_gold_rush_2025.core.main.Main'
        )
    }

    // Esto le dice a Gradle: "Toma todas las librerías, descomprímelas y mételas dentro de mi JAR"
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    // Vital para evitar errores de archivos duplicados (META-INF, license, etc.)
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
